[package]
name = "mailhog_adapter"
version = "0.1.0"
authors = ["v0idpwn <v0idpwn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = "1"
lettre = "0.9"
lettre_email = "0.9"
env_logger = "0.7"
